--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.version>1.6</jdk.version>
         <product.buildtype>dev</product.buildtype>
-        <product.buildversion>beta1</product.buildversion>
+        <product.buildversion>beta3</product.buildversion>
         <product.buildts>${maven.build.timestamp}</product.buildts>
     </properties>
 
@@ -48,17 +48,17 @@
         <dependency>
             <groupId>org.agmip</groupId>
             <artifactId>acmo</artifactId>
-            <version>1.1.8</version>
+            <version>1.1.9-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.agmip.translators.acmo</groupId>
             <artifactId>acmo-dssat</artifactId>
-            <version>1.0.3</version>
+            <version>1.0.4-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.agmip.translators.acmo</groupId>
             <artifactId>acmo-apsim</artifactId>
-            <version>1.0.2</version>
+            <version>1.0.3-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.agmip.translators.acmo</groupId>
